k8s/ntfy/ntfy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ntfy

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
  namespace: ntfy
  labels:
    app: ntfy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ntfy
  template:
    metadata:
      labels:
        app: ntfy
    spec:
      nodeSelector:
        kubernetes.io/hostname: omv
      containers:
        - name: ntfy
          image: binwiederhier/ntfy
          args:
            - serve
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
          volumeMounts:
            - name: config
              mountPath: /etc/ntfy
              readOnly: true
            - name: data
              mountPath: /var/cache/ntfy
              subPath: cache
            - name: data
              mountPath: /var/lib/ntfy
              subPath: lib
      volumes:
        - name: config
          configMap:
            name: ntfy-config
        - name: data
          persistentVolumeClaim:
            claimName: ntfy-data

---
apiVersion: v1
kind: Service
metadata:
  name: ntfy
  namespace: ntfy
  labels:
    app: ntfy
spec:
  type: ClusterIP
  selector:
    app: ntfy
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ntfy
  namespace: ntfy
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - hosts:
        - ntfy.cloudless.gr
      secretName: ntfy-gr-tls
  rules:
    - host: ntfy.cloudless.gr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ntfy
                port:
                  number: 80
